--- a/srv/src/main/resources/templates/compliment.html
+++ b/srv/src/main/resources/templates/compliment.html
@@ -15,14 +15,14 @@
         </div>
         <br>
         <div class="buttons">
-            <form th:action="@{/complimenter}">
+            <form th:action="@{/enough}">
                 <div class="button-div-left">
-                    <input type="image" src="images/page2buttonNext.jpg" alt="Next Compliment">
+                    <button type="submit">Enough compliments!</button>
                 </div>
             </form>
-            <form th:action="@{/enough}">
+            <form th:action="@{/complimenter}">
                 <div class="button-div-right">
-                    <input type="image" class="enough" src="images/page2enough.jpg" alt="Enough">
+                    <button type="submit">Give me compliments!</button>
                 </div>
             </form>
         </div>
