--- a/srv/src/main/resources/static/styles/style.css
+++ b/srv/src/main/resources/static/styles/style.css
@@ -76,10 +76,9 @@ input[type=image]:hover {
     background: #555;
     border: 3px solid #555;
 }
-input[type=image].enough {
+button {
+    font-size: 26px;
     background: gainsboro;
-    height: 300px;
-    width: 400px;
     box-sizing: border-box;
     border: 3px solid #ccc;
     border-radius: 5px;
@@ -87,7 +86,6 @@ input[type=image].enough {
     transition: 0.5s;
     outline: none;
 }
-input[type=image].enough:hover {
-    background: #555;
+button:hover {
     border: 3px solid #555;
 }
