--- a/srv/src/main/resources/templates/enough-compliment.html
+++ b/srv/src/main/resources/templates/enough-compliment.html
@@ -9,10 +9,7 @@
 <div class="content">
     <form th:action="@{/}" method="get">
         <div class="page-div">
-            <input width="500" type="image" src="images/page3.jpg" alt="Change Name">
-        </div>
-        <div class="page-div">
-            <img width="500" src="images/page3second.jpg" alt="I'm waiting for a compliment">
+            <input width="500" type="image" src="images/page3.jpg" alt="Back to main">
         </div>
     </form>
 </div>
