--- a/srv/src/main/resources/templates/compliment.html
+++ b/srv/src/main/resources/templates/compliment.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="right-content">
-        <img width="450" th:src="@{${'images/page2dynamicMiddle/'+ number.num  + '.jpg'}}" alt="Dynamic picture">
+        <img width="100%" th:src="@{${'images/page2dynamicMiddle/'+ number.num  + '.jpg'}}" alt="Dynamic picture">
     </div>
 </div>
 </body>
