--- a/srv/src/main/resources/static/styles/style.css
+++ b/srv/src/main/resources/static/styles/style.css
@@ -27,7 +27,7 @@ body {
     position: relative;
     width: 100%;
     margin: 0;
-    padding: 25px;
+    padding: 0;
     text-align: center;
     align-items: center;
 }
