--- a/srv/src/main/resources/templates/index.html
+++ b/srv/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Complimaker</title>
-    <link rel="stylesheet" type="text/css" th:href="@{../styles/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{../styles/style.css}" href="../static/styles/style.css">
 </head>
 <body>
 <div class="content">
@@ -12,6 +12,10 @@
         <div class="page-div">
             <label for="name" class="text">What is your name?</label>
             <input type="text" style="height:42px" id="name" th:field="*{myName}" name="name">
+            <input type="radio" id="gender1" name="gender" value="MALE" checked="checked">
+            <label class="gender" for="gender1">Male</label>
+            <input type="radio" id="gender2" name="gender" value="FEMALE">
+            <label class="gender" for="gender2">Female</label>
         </div>
         <div class="page-div">
             <input width="500" type="image" src="images/page1button.jpg" alt="Give Me Compliment">
