--- a/srv/src/main/resources/static/styles/style.css
+++ b/srv/src/main/resources/static/styles/style.css
@@ -77,6 +77,10 @@ input[type=image]:hover {
     background: #555;
     border: 3px solid #555;
 }
+input[type=radio] {
+    width: 15px;
+    margin: 10px;
+}
 button {
     font-size: 26px;
     background: gainsboro;
